2000-08-16  Peter Stephenson  <pws@csr.com>

	* Andrej: 12658: .cvsignore, Src/.cvsignore: cscope ignorance.

2000-08-16  Sven Wischnowsky  <wischnow@zsh.org>

	* 12654: Doc/Zsh/mod_parameter.yo, Src/Modules/parameter.c: make
 	$modules report aliases correctly
	
	* unposted: Completion/Builtins/_pids: remove unnecessary local parameter

2000-08-15  Peter Stephenson  <pws@csr.com>

	* 12650: Completion/Builtins/_zmodload: don't lists aliases if
	there aren't any.

2000-08-15  Bart Schaefer  <schaefer@zsh.org>

	* 12652: Src/module.c: Fix variable scoping problem that caused
	crash in `zmodload -u'.

2000-08-15  Sven Wischnowsky  <wischnow@zsh.org>

	* 12640: Completion/Builtins/_pids, Completion/Builtins/_zstyle,
 	Doc/Zsh/compsys.yo: call ps only once and be more intelligent when
 	finding the PIDs
	
	* 12635: Completion/Builtins/_pids: small improvement to allow
 	lists where the pid is not in the first column
	
2000-08-14  Bart Schaefer  <schaefer@zsh.org>

	* Andrej: 12623: configure.in, Src/mkmakemod.sh, Src/zsh.h:  Fix
	dynamic linking on cygwin, again.
	
	* 12621: Src/Zle/zle_main.c: Use ztrdup() on a string that will
	later be freed; this appears to have been a bug ever since 9839.

	* Andrej: 12620: configure.in, Src/system.h: Fix cache variable
	test for mmap, remove cygwin special-case.

	* 12617: configure.in: Use AC_FUNC_MMAP rather than just test for
	existence of mmap.

	* Andrej: 12614: Test/53completion.ztst, Test/54compmatch.ztst,
	Test/55arguments.ztst: Add %clean sections to unload zpty module.

	* Andrej: 12614: Completion/Builtins/_zmodload: Add DLL to suffix
	list, for benefit of cygwin.

2000-08-14  Sven Wischnowsky  <wischnow@zsh.org>

	* Andrej: 12613: Src/lex.c: missing mod_export
	
	* 12610: Src/Zle/computil.c: make all builtins in computil test if
 	they were called from a completion function
	
2000-08-13  Bart Schaefer  <schaefer@zsh.org>

	* 12604: Src/compat.c, Src/system.h, Src/Modules/files.c,